--- a/app/src/main/res/layout/activity_home_live.xml
+++ b/app/src/main/res/layout/activity_home_live.xml
@@ -4,6 +4,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fireTopLayout"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -38,50 +39,92 @@
       android:textStyle="bold" />
 
 
-  <FrameLayout
+  <LinearLayout
       android:id="@+id/control"
       android:layout_width="match_parent"
       android:layout_height="60dp"
       android:layout_alignParentBottom="true"
       android:layout_alignParentStart="true"
+      android:layout_marginBottom="20dp"
       >
 
-      <RelativeLayout
+      <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
+          android:layout_gravity="center"
           >
+
           <ToggleButton
               android:id="@+id/facingSwitch"
+              style="@style/Widget.MaterialComponents.FloatingActionButton"
               android:layout_width="48dp"
               android:layout_height="48dp"
               android:layout_gravity="center_vertical"
               android:background="@drawable/toggle_style"
+              android:checked="false"
               android:textOff=""
               android:textOn=""
-              android:checked="false"
 
-              />
+
+              app:layout_constraintBottom_toBottomOf="parent"
+              app:layout_constraintEnd_toStartOf="@+id/btnTakePicture"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintTop_toTopOf="parent" />
 
           <com.google.android.material.floatingactionbutton.FloatingActionButton
               android:id="@+id/floatingActionButton"
+              style="@style/Widget.MaterialComponents.FloatingActionButton"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_alignParentTop="true"
-              android:layout_centerHorizontal="true"
-              android:layout_centerVertical="true"
+              android:backgroundTint="#fff"
               android:clickable="true"
-              app:srcCompat="@drawable/lens"
+              android:focusable="true"
+              app:fabCustomSize="60dp"
+              app:layout_constraintBottom_toBottomOf="parent"
+              app:layout_constraintDimensionRatio="h,1:1"
+              app:layout_constraintEnd_toStartOf="@+id/gallery"
+              app:layout_constraintStart_toEndOf="@+id/facingSwitch"
+
+              app:layout_constraintTop_toTopOf="parent"
+              app:maxImageSize="45dp"
+              app:srcCompat="@drawable/lens" />
+
+          <com.google.android.material.floatingactionbutton.FloatingActionButton
+              android:id="@+id/gallery"
+              style="@style/Widget.MaterialComponents.FloatingActionButton"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:backgroundTint="#fff"
+              android:clickable="true"
+              android:focusable="true"
+              app:fabCustomSize="48dp"
+              app:layout_constraintBottom_toBottomOf="parent"
+              app:layout_constraintDimensionRatio="h,1:1"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintStart_toEndOf="@+id/btnTakePicture"
+              app:layout_constraintTop_toTopOf="parent"
+              app:maxImageSize="35dp"
+              app:srcCompat="@drawable/gallery"
+
               />
 
 
-      </RelativeLayout>
+      </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
 
-  </FrameLayout>
+  </LinearLayout>
 
 
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"
+
+        />
 <!--    <com.sifatsdroid.facedetectionexp.common.ScannerOverlay
         android:layout_width="match_parent"
         android:layout_height="match_parent"
