--- a/app/src/main/res/layout/activity_live_preview.xml
+++ b/app/src/main/res/layout/activity_live_preview.xml
@@ -13,9 +13,11 @@
   <com.sifatsdroid.facedetectionexp.common.CameraSourcePreview
       android:id="@+id/firePreview"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
+      android:layout_height="match_parent"
       android:layout_alignParentStart="true"
-      android:layout_alignParentTop="true">
+      android:layout_alignParentTop="true"
+      android:layout_alignParentBottom="true"
+      >
 
       <com.sifatsdroid.facedetectionexp.common.GraphicOverlay
           android:id="@+id/fireFaceOverlay"
@@ -23,7 +25,7 @@
           android:layout_height="match_parent"
           android:layout_alignParentStart="true"
           android:layout_alignParentTop="true"
-          android:layout_alignParentBottom="true"/>
+          android:layout_alignParentBottom="true" />
   </com.sifatsdroid.facedetectionexp.common.CameraSourcePreview>
 
   <TextView android:id="@+id/text"
@@ -48,7 +50,9 @@
           android:id="@+id/spinner"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_gravity="center" />
+          android:layout_gravity="center"
+
+          />
 
       <ToggleButton
           android:id="@+id/facingSwitch"
